--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,145 @@
+EXTRA_DIST = blue-border-usage.inc blue-color-usage.inc blue-design-angular-usage.inc blue-design-defaults-usage.inc blue-design-dimension-usage.inc blue-design-elements-usage.inc blue-design-element-usage.inc blue-design-elliptic-usage.inc blue-design-fill-styles-usage.inc blue-design-fill-style-usage.inc blue-design-layers-usage.inc blue-design-layer-usage.inc blue-design-linear-usage.inc blue-design-line-style-segments-usage.inc blue-design-line-style-segment-usage.inc blue-design-line-styles-usage.inc blue-design-line-style-usage.inc blue-design-line-usage.inc blue-design-point-usage.inc blue-design-polyline-usage.inc blue-design-radial-usage.inc blue-design-spline-usage.inc blue-design-text-usage.inc blue-design-tolerance-usage.inc blue-design-usage.inc blue-drawing-usage.inc blue-margins-usage.inc blue-paper-usage.inc blue-render-usage.inc blue-title-block-usage.inc blue-vertex-usage.inc blue-vertices-usage.inc
+
 AM_CFLAGS = -O3 -I .. -I $(top_srcdir)/include
 AM_LDFLAGS =
+
+bin_PROGRAMS = blue-border blue-color blue-design-angular blue-design blue-design-defaults blue-design-dimension blue-design-element blue-design-elements blue-design-elliptic blue-design-fill-style blue-design-fill-styles blue-design-layer blue-design-layers blue-design-linear blue-design-line blue-design-line-style blue-design-line-styles blue-design-line-style-segment blue-design-line-style-segments blue-design-point blue-design-polyline blue-design-radial blue-design-spline blue-design-text blue-design-tolerance blue-drawing blue-margins blue-paper blue-title-block blue-vertex blue-vertices blue-render
+
+blue_border_SOURCES = blue-border.c blue-border-parms.c
+blue_border_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_border_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_color_SOURCES = blue-color.c blue-color-parms.c
+blue_color_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_color_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_angular_SOURCES = blue-design-angular.c blue-design-angular-parms.c
+blue_design_angular_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_angular_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_SOURCES = blue-design.c blue-design-parms.c
+blue_design_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_defaults_SOURCES = blue-design-defaults.c blue-design-defaults-parms.c
+blue_design_defaults_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_defaults_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_dimension_SOURCES = blue-design-dimension.c blue-design-dimension-parms.c
+blue_design_dimension_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_dimension_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_element_SOURCES = blue-design-element.c blue-design-element-parms.c
+blue_design_element_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_element_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_elements_SOURCES = blue-design-elements.c blue-design-elements-parms.c
+blue_design_elements_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_elements_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_elliptic_SOURCES = blue-design-elliptic.c blue-design-elliptic-parms.c
+blue_design_elliptic_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_elliptic_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_fill_style_SOURCES = blue-design-fill-style.c blue-design-fill-style-parms.c
+blue_design_fill_style_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_fill_style_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_fill_styles_SOURCES = blue-design-fill-styles.c blue-design-fill-styles-parms.c
+blue_design_fill_styles_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_fill_styles_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_layer_SOURCES = blue-design-layer.c blue-design-layer-parms.c
+blue_design_layer_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_layer_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_layers_SOURCES = blue-design-layers.c blue-design-layers-parms.c
+blue_design_layers_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_layers_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_linear_SOURCES = blue-design-linear.c blue-design-linear-parms.c
+blue_design_linear_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_linear_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_line_SOURCES = blue-design-line.c blue-design-line-parms.c
+blue_design_line_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_line_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_line_style_SOURCES = blue-design-line-style.c blue-design-line-style-parms.c
+blue_design_line_style_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_line_style_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_line_styles_SOURCES = blue-design-line-styles.c blue-design-line-styles-parms.c
+blue_design_line_styles_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_line_styles_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_line_style_segment_SOURCES = blue-design-line-style-segment.c blue-design-line-style-segment-parms.c
+blue_design_line_style_segment_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_line_style_segment_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_line_style_segments_SOURCES = blue-design-line-style-segments.c blue-design-line-style-segments-parms.c
+blue_design_line_style_segments_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_line_style_segments_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_point_SOURCES = blue-design-point.c blue-design-point-parms.c
+blue_design_point_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_point_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_polyline_SOURCES = blue-design-polyline.c blue-design-polyline-parms.c
+blue_design_polyline_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_polyline_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_radial_SOURCES = blue-design-radial.c blue-design-radial-parms.c
+blue_design_radial_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_radial_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_spline_SOURCES = blue-design-spline.c blue-design-spline-parms.c
+blue_design_spline_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_spline_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_text_SOURCES = blue-design-text.c blue-design-text-parms.c
+blue_design_text_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_text_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_design_tolerance_SOURCES = blue-design-tolerance.c blue-design-tolerance-parms.c
+blue_design_tolerance_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_design_tolerance_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_drawing_SOURCES = blue-drawing.c blue-drawing-parms.c
+blue_drawing_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_drawing_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_margins_SOURCES = blue-margins.c blue-margins-parms.c
+blue_margins_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_margins_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_paper_SOURCES = blue-paper.c blue-paper-parms.c
+blue_paper_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_paper_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_title_block_SOURCES = blue-title-block.c blue-title-block-parms.c
+blue_title_block_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_title_block_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_vertex_SOURCES = blue-vertex.c blue-vertex-parms.c
+blue_vertex_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_vertex_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_vertices_SOURCES = blue-vertices.c blue-vertices-parms.c
+blue_vertices_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GRAY_CFLAGS}
+blue_vertices_LDADD = ${GRAY_LIBS} -lblue -lblue-xml
+
+blue_render_SOURCES = blue-render.c render-2d-cairo.c
+blue_render_CFLAGS = ${AM_CFLAGS} ${XML_CFLAGS} ${GTK_CFLAGS} ${GRAY_CFLAGS}
+blue_render_LDADD = ${XML_LIBS} ${GTK_LIBS} ${GRAY_LIBS} -lm -lblue -lblue-xml
 
 lib_LTLIBRARIES = libblue.la libblue-xml.la
 
 LDADD = libblue.la libblue-xml.la
 
-libblue_la_SOURCES = border.c design.c design-anchor-location-type.c design-angular.c design-defaults.c design-dimension.c design-dimension-type.c design-element.c design-elements.c design-element-type.c design-elliptic.c design-fill-style.c design-fill-styles.c design-fill-style-type.c design-layer.c design-layers.c design-linear.c design-line.c design-line-style.c design-line-styles.c design-line-style-segment.c design-line-style-segments.c design-point.c design-polyline.c design-radial.c design-radial-type.c design-spline.c design-text.c design-text-type.c design-tolerance.c design-visibility-type.c drawing.c margins.c paper.c render-2d-cairo.c title-block.c units.c
+libblue_la_SOURCES = border.c design.c design-anchor-location-type.c design-angular.c design-defaults.c design-dimension.c design-dimension-type.c design-element.c design-elements.c design-element-type.c design-elliptic.c design-fill-style.c design-fill-styles.c design-fill-style-type.c design-layer.c design-layers.c design-linear.c design-line.c design-line-style.c design-line-styles.c design-line-style-segment.c design-line-style-segments.c design-point.c design-polyline.c design-radial.c design-radial-type.c design-spline.c design-text.c design-text-type.c design-tolerance.c design-visibility-type.c drawing.c margins.c paper.c title-block.c units.c
 libblue_la_LDFLAGS = -version-info 0:1:0
-libblue_la_CFLAGS = ${AM_CFLAGS} ${CAIRO_CFLAGS} ${PANGO_CFLAGS} ${GRAY_CFLAGS}
+libblue_la_CFLAGS = ${AM_CFLAGS} ${GRAY_CFLAGS}
 
 libblue_xml_la_SOURCES = border-xml.c design-xml.c design-angular-xml.c design-defaults-xml.c design-dimension-xml.c design-elements-xml.c design-element-xml.c design-elliptic-xml.c design-fill-styles-xml.c design-fill-style-xml.c design-layers-xml.c design-layer-xml.c design-linear-xml.c design-line-style-segments-xml.c design-line-style-segment-xml.c design-line-styles-xml.c design-line-style-xml.c design-line-xml.c design-point-xml.c design-polyline-xml.c design-radial-xml.c design-spline-xml.c design-text-xml.c design-tolerance-xml.c drawing-xml.c margins-xml.c paper-xml.c title-block-xml.c
 libblue_xml_la_LDFLAGS = -version-info 0:1:0
